--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.8",
     "antd-mobile": "^2.3.4",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -42,5 +43,6 @@
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.8",
     "react-router-dom": "^5.2.0"
-  }
+  },
+  "proxy": "https://localhost:5001"
 }
