--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "antd": "^4.16.8",
     "antd-mobile": "^2.3.4",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
