--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd-mobile": "^2.3.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
@@ -42,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@stripe/react-stripe-js": "^1.5.0",
+    "@stripe/stripe-js": "^1.18.0",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.8",
